Changed Task names

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
       <h1>Task Tracker</h1>
       <ul id="tasks">
-        <li>Task 1</li>
-        <li>Task 2</li>
-        <li>Task 3</li>
+        <li>I</li>
+        <li>Am</li>
+        <li>Arjun</li>
       </ul>
     </div>
 
