--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Task Tracker</h1>
+      <h1>Identity</h1>
       <ul id="tasks">
         <li>I</li>
         <li>Am</li>
