--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Identity</h1>
+      <h1>Git Tutorial</h1>
       <ul id="tasks">
         <li>I</li>
-        <li>Am</li>
+        <li>U</li>
         <li>Arjun</li>
       </ul>
     </div>
